--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.613.0",
     "@aws-sdk/s3-request-presigner": "^3.613.0",
+    "aws-sdk": "^2.1658.0",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "fluent-ffmpeg": "^2.1.3",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "mysql": "^2.18.1",
     "vue": "^3.2.13",
     "vue-router": "^4.4.0",
     "vuex": "^4.1.0"
