--- a/appspec.yml
+++ b/appspec.yml
@@ -11,9 +11,9 @@ permissions:
     group: ec2-user
 
 hooks:
-  BeforeInstall:
-    - location: deploy-before.sh
-      runas: ec2-user
+  # BeforeInstall:
+  #   - location: deploy-before.sh
+  #     runas: ec2-user
   ApplicationStart:
     - location: deploy.sh
       runas: ec2-user
